ai asistant error was handled, happened after ocr feature added